--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 id="ygo-title">Yu-Gi-Oh! Card Search</h1>
         <div class="search-box">
             <div class="search-div">
-                <input type="text" id="input-search-two" value="dude" placeholder="Search">
+                <input type="text" id="input-search-two" value="dude" placeholder="Search" autofocus>
                 <div class="btn-container">
                     <button id="clear-btn">clear</button>
                     <button id="fetch-btn">fetch</button>
