--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
     <section>
         <h1 id="ygo-title">Yu-Gi-Oh! Card Search</h1>
         <div class="search-box">
-            <div class="search-div">
-                <input type="text" id="input-search-two" value="dude" placeholder="Search" autofocus>
-                <div class="btn-container">
-                    <button id="clear-btn">clear</button>
-                    <button id="fetch-btn">fetch</button>
-                </div>
-            </div>
+            <input type="text" id="input-search" value="dude" placeholder="Search" autofocus>
+            <button id="clear-btn">clear</button>
+            <button id="fetch-btn">fetch</button>
         </div>
+        <button id="scrollToTopBtn" title="Go to top">Top</button>
         <div id="new-card-container"></div>
     </section>
 
