--- a/index.html
+++ b/index.html
@@ -12,17 +12,33 @@
 </head>
 
 <body>
-    <section>
-        <h1 id="ygo-title">Yu-Gi-Oh! Card Search</h1>
-        <div class="search-box">
-            <input type="text" id="input-search" value="dude" placeholder="Search" autofocus>
-            <button id="clear-btn">clear</button>
-            <button id="fetch-btn">fetch</button>
-        </div>
-        <button id="scrollToTopBtn" title="Go to top">Top</button>
-        <div id="new-card-container"></div>
-    </section>
+    <header>
+            <div class="navbar">
+                <img id=logo-nav src="./assets/yu_gi_oh__tcg_logo_by_homoco9_ddyvtrd-pre.png" width="100%">
+                <span id="title">Fetch Data WebApp - developed by Francesco Balleri</span>
+                <label for="card-select">"under development" Card Type</label>
+                <select id="card-select">
+                    <option>Monster</option>
+                    <option>Spell</option>
+                    <option>Trap</option>
+                </select>
+            </div>
+    </header>
+    <main>
+        <section>
+            <!--  <h1 id="ygo-title">Yu-Gi-Oh! Card Search</h1> -->
+            <div class="search-box">
+                <input type="text" id="input-search" value="dude" placeholder="Search" autofocus>
+                <button id="clear-btn" class="btn">clear</button>
+                <button id="fetch-btn" class="btn">fetch</button>
+            </div>
+            <button id="scrollToTopBtn" title="Go to top">Top</button>
+            <div id="new-card-container"></div>
+        </section>
+    </main>
+    <footer>
 
+    </footer>
     <script src="./script.js"></script>
 </body>
 
