--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="navbar">
                 <img id=logo-nav src="./assets/yu_gi_oh__tcg_logo_by_homoco9_ddyvtrd-pre.png" width="100%">
                 <span id="title">Fetch Data WebApp - developed by Francesco Balleri</span>
-                <label for="card-select">"under development" Card Type</label>
+                <label for="card-select"><!-- "under development" --> Card Type</label>
                 <select id="card-select">
                     <option>Monster</option>
                     <option>Spell</option>
