--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section>
             <!--  <h1 id="ygo-title">Yu-Gi-Oh! Card Search</h1> -->
             <div class="search-box">
-                <input type="text" id="input-search" value="dude" placeholder="Search" autofocus>
+                <input type="text" id="input-search" value="" placeholder="Search" autofocus>
                 <button id="clear-btn" class="btn">clear</button>
                 <button id="fetch-btn" class="btn">fetch</button>
             </div>
